  that entries from such feeds must be individually fetched by the client 
  before being updated.
  
- Added GDataServerError, representing error responses from services supporting
  structured errors.  On feed and entry fetch errors, a GDataServerErrorGroup
  will be available from the NSError object's userInfo dictionary
  with the key kGDataStructuredErrorsKey.

- Added query parameters prettyprint, protocolVersion, language

- Updated YouTube, DocList, and Spreadsheet APIs for GData v2, and Spreadsheet
  and Contacts samples for v2 API changes

- Added support for using GDataHTTPFetcher with a single failure selector.

- Added GDataTargetNamespace.h (and a tool to generate it) to allow plug-ins
  to use the library with less risk of class name collision
  
- Added -responseHeaders getter for GDataHTTPFetcher

- Added -fetchDocEntryWithURL for fetching a single doc entry

- Added -entryForGPhotoID for finding a photo or album with the given ID

- Added -entryForSystemGroupID for finding a contact group with the given
  system group ID

- Added feed method for finding feed entries of a single kind

- Updated DocsSample with more folder support

- Fetcher logging now uses xmllint to prettyprint XML for better readability
  in Safari
  
- Added setNamespaces: to GDataXMLNode

- Added openAccess element to books volume entry

- Added new Docs query parameters and new category label constants

- Builds for iPhone and requiring 10.5 and higher now take advantage of
  fast enumeration
  
- Added realm attribute to GDataExtendedProperty element
  
- Added timesCleaned read-only property to calendar entries, added privateCopy
  property to calendar event entries, and removed unsupported "contributor"
  access role

Bugs Fixed

- Moved some classes from common sources to Calendar folder

- Added methods to fetch individual calendar, photo, and spreadsheet entries

- Fixed query generation for URLs that already contain some parameters
